--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,19 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    
 }
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    height: 30px;
     box-shadow: 2px 2px 5px black;
+    background-color: #606EFF;
 }
-#logo {
-    margin-left: 10px;
-    font-size: 30px;
-    font-weight: 900;
-    color: #606EFF;
-}
-
 header nav ul {
     list-style: none;
     padding: 0;
@@ -27,40 +21,76 @@ header nav ul {
 }
 
 header nav ul li {
-    margin-top: 50px;
+    margin-top: 5px;
     display: inline-block;
-    margin-right: 10px;
 }
 
 header nav ul li a {
+    margin-left: 10px;
+    text-decoration: none;  
+    font-weight: 900;
+    color: #e9e9e9;
+}
+header nav ul li a:hover {
+    color: #333;
+}
+h1 {
+    margin-bottom: 30px;
+    font-size: 50px;
+    color: #606EFF;
+}
+#btn {
+    margin-top: 30px;
+    width: 200px;
+    height: 30px;
+    background-color: #606EFF;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+}
+#btn a {
     text-decoration: none;
-    font-size: 18px;
-    color: #020202;
+    color: white;
 }
-header nav ul li a:hover {font-weight: 900;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-section {
-    padding: 50px 0;
-}
-#valores {
-    background-image: url(./assets/configuração.gif);
-    background-repeat: no-repeat;
-    background-position: center
-}
-section .container p {
-    line-height: 25px;
+#btn:hover {
+    opacity: 75%;
 }
 #home {
     display: flex;
     flex-direction: row;
 }
+#home .containerhome {
+    margin-left:  5%;
+    margin-right: 5%;
+    width: 40%;
+}
+
+#home .containerhome  p {
+    line-height: 30px;
+}
+#imghome {
+    width: 40%;
+}
+#about {
+    display: flex;
+    flex-wrap: nowrap  wrap  wrap-reverse;
+    justify-content: space-between;
+}
+.conteudo {
+    text-align: center;
+    line-height: 30px;
+    width: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
+    border-radius: 10px;
+    border: solid rgba(105, 102, 102, 0.801) 1px;
+    box-shadow: 2px 2px 5px 2px #969494da;
+}
+section {
+    padding: 50px 0;
+}
+
 
 footer {
     background-color: #333;
@@ -101,9 +131,9 @@ footer p {
 
 .prev-btn,
 .next-btn {
-    background-color: #606EFF;;
+    background-color: #5a5e8ab6;;
     width: 40px ;
-        height: 130px;
+    height: 130px;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -113,20 +143,57 @@ footer p {
 
 .prev-btn:hover,
 .next-btn:hover {
-    background-color: #4565a0;
+    width: 50px;
 }
 
 #imgprojeto{
     height: 400px;
     border-radius: 50px;
-    width: 50%;
+    width: 100%;
+}
+#contato {
+    text-align: center;
+}
+#contato a {
+    text-decoration: none;
+}
+#contato img {
+    width: 60px;
+    margin-top: 5px;
+    margin-right: 20px;
 }
 @media (max-width:700px){
-    #imgprojeto{
-        height: 200px;
-        border-radius: 50px;
-        width: 70%;
+    header {
+        flex-direction: column;
     }
+    header nav ul li  {
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+    h1 {
+        font-size: 40px;
+    }
+    #home {
+        flex-direction: column;
+    } 
+    #home .containerhome {
+        text-align: center;
+        margin-left: 5%;
+        width: 90%;
+        margin-bottom: 60px;
+    }
+    .conteudo {
+        width: 80%;
+        margin-left: 10%;
+        margin-bottom: 60px;
+    }
+    #imghome {
+        width: 100%;
+    }
+    #about {
+        flex-direction: column;
+    }
+    
     .prev-btn,
     .next-btn {
         width: 40px ;
@@ -138,18 +205,9 @@ footer p {
         border-radius: 5px;
         cursor: pointer;
     }
-    #home {
-        flex-direction: column;
+    #contato img {
+        width: 60px;
+        margin-top: 5px;
+        margin-right: 20px;
     }
-    #imghome img {
-        margin-left: 10%;
-        width: 80%;
-    }
-    header {
-        flex-direction: column;
-    }
-    header nav ul li  {
-        margin-top: 10px;
-        margin-bottom: 5px;
-    } 
 }
