--- a/styles.css
+++ b/styles.css
@@ -231,3 +231,10 @@ footer p {
 #info  a {
     font-weight: 900;
 }
+@media (max-width:700px){
+    #cursos img {
+        height: 450px;
+        width: 80%;
+    }
+
+}
