--- a/vendaApexBet/style.css
+++ b/vendaApexBet/style.css
@@ -1,12 +1,13 @@
 body {
     margin:0;
     box-sizing: border-box;
-    background-color:  #111213;
+    
+    background: linear-gradient(to right, #b81f1f, #020202);
 }
 header {
     margin: 0;
     width: 100%;
-    height: 200px;
+    height: 350px;
     background-image: url(./image/Roulette.webp);
     background-position: center center;
     background-repeat: no-repeat;
@@ -14,36 +15,34 @@ header {
 }
 nav {
     width: 100%;
-    height: 30px;
-    margin-top: -15px;
+    
 }
 nav ul {
     width: 80%;
-    height: 30px;
     margin-left: 10%;
+    
 }
 nav ul li {
-    width:  100%;
-    height: 30px;
-    width: 80%;
-    margin-left: 10%;
-    display: flex;
+    justify-content: space-between;
+    display:  flex;
     flex-direction: row;
-    justify-content: center;
+    list-style: none;
+    width: 80%;
+    margin-left: 2%;
+    
 }
 nav ul li a {
-    text-decoration: none;
-    margin-top: 5px;
     font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
     color: white;
-    margin-left: 20px;
-    margin-right: 20px;
+
 }
 nav ul li a:hover{
     opacity: 60%;
 }
 section {
-    margin-top: 100px;
+    margin-bottom: 250px;
     width: 100%;
     height: auto;
 }
@@ -81,12 +80,25 @@ h1 {
     opacity: 75%;
 }
 #imgHome {
+    margin-top: 100px;
     width: 40%;
     margin-left: 10%;
 }
 #propHome {
     margin-top: 10px;
-    width: 400px;
+    width: 300px;
+}
+@media (max-width: 750px) {
+    #imgHome{
+        display: none;
+    }
+    #txtHome {
+        width: 80%;
+        margin-left: 10%;
+    }
+    section {
+        margin-top: 350px;
+    }
 }
 #conteinerAbout {   
     display: flex;
@@ -109,6 +121,20 @@ h1 {
     line-height: 30px;
     font-weight: 600;
 }
+@media (max-width: 750px){
+    #imgAbout {
+        display: none;
+    }
+    #txtAbout{
+        width: 80%;
+        line-height: 30px;
+        margin-left: 10%;
+        margin-top: 100px;
+        line-height: 40px;
+        
+    }
+
+}
 #compraConteudo {
     width: 100%;
     height: 400px;
@@ -125,4 +151,9 @@ h1 {
     width: 100%;
     background-color: transparent;
     backdrop-filter: blur(9px);
+}
+@media (max-width: 750px){
+    #txtCompra{
+        margin-top: -100px;
+    }
 }
