--- a/vendaApexBet/style.css
+++ b/vendaApexBet/style.css
@@ -1,7 +1,6 @@
 body {
     margin:0;
     box-sizing: border-box;
-    
     background: linear-gradient(to right, #b81f1f, #020202);
 }
 header {
@@ -42,9 +41,14 @@ nav ul li a:hover{
     opacity: 60%;
 }
 section {
-    margin-bottom: 250px;
     width: 100%;
     height: auto;
+}
+#home {
+    margin-bottom: 250px;
+}
+#sobre{
+    margin-bottom: 250px;
 }
 #conteudoHome {
     text-align: center;
@@ -89,29 +93,35 @@ h1 {
     width: 300px;
 }
 @media (max-width: 750px) {
-    #imgHome{
-        display: none;
+    body {
+        background: linear-gradient(to right,  #020202, #b81f1f);
+    }
+    #conteudoHome {
+        flex-direction: column;
     }
     #txtHome {
         width: 80%;
         margin-left: 10%;
     }
-    section {
-        margin-top: 350px;
+    #imgHome {
+        width: 80%;
+        margin-left: 10%;
     }
 }
-#conteinerAbout {   
+#conteinerAbout {  
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 #imgAbout {
+    margin-top: 100px;
     width: 40%;
     margin-left: 5%;
     margin-right: 5%;
 } #imgAbout img {
     width: 400px;
 }#txtAbout {
+    margin-top:100px;
     width: 40%;
     margin-left: 5%;
     margin-right: 5%;
@@ -122,8 +132,8 @@ h1 {
     font-weight: 600;
 }
 @media (max-width: 750px){
-    #imgAbout {
-        display: none;
+    #conteinerAbout {
+        flex-direction: column;
     }
     #txtAbout{
         width: 80%;
@@ -131,13 +141,16 @@ h1 {
         margin-left: 10%;
         margin-top: 100px;
         line-height: 40px;
-        
     }
-
+    #imgAbout { 
+        width: 80%;
+        margin-left:  10%;
+        text-align: center;
+    }
 }
 #compraConteudo {
     width: 100%;
-    height: 400px;
+    height: 700px;
     background-color: transparent;
     background-image: url(./image/Roulette.webp);
     background-position: center center;
@@ -145,7 +158,7 @@ h1 {
 }
 #txtCompraConteudo {
     color: white;
-    margin-top:  -300px;
+    margin-top:  -400px;
     text-align: center;
     font-size: 40px;
     width: 100%;
