--- a/vendaApexBet/style.css
+++ b/vendaApexBet/style.css
@@ -31,6 +31,7 @@ nav ul li {
     
 }
 nav ul li a {
+    margin-right: 20px;
     font-size: 25px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-decoration: none;
