update in this poage
update in this page

--- a/vendaApexBet/style.css
+++ b/vendaApexBet/style.css
@@ -1,176 +1,188 @@
 body {
-    margin:0;
-    box-sizing: border-box;
-    background: linear-gradient(to right, #b81f1f, #020202);
-}
-header {
+    font-family: 'Arial', sans-serif;
     margin: 0;
-    width: 100%;
-    height: 350px;
-    background-image: url(./image/Roulette.webp);
-    background-position: center center;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #464343;
+}
+
+/* Estilos do cabeçalho */
+header {
+    margin-top: -20px;
+    background-image: url(./image/apresentacao.png);
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
-nav {
-    width: 100%;
-    
-}
-nav ul {
-    width: 80%;
-    margin-left: 10%;
-    
-}
-nav ul li {
-    display:  flex;
-    flex-direction: row;
-    list-style: none;
-    width: 80%;
-    margin-left: 2%;
-    
-}
-nav ul li a {
-    margin-right: 10px;
-    margin-left: 10px;
-    font-size: 18px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-decoration: none;
-    color: white;
-
-}
-nav ul li a:hover{
-    opacity: 60%;
-}
-section {
-    width: 100%;
-    height: auto;
-}
-#home {
-    margin-bottom: 250px;
-}
-#sobre{
-    margin-bottom: 250px;
-}
-#conteudoHome {
+    color: #fff;
     text-align: center;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+    height: 200px;
 }
 h1 {
-    margin-top: 130px;
-}
-#txtHome{
-    width: 50%;
-}
-#btnHome {
+    text-align: center;
     color: white;
-    background-color: rgba(241, 44, 76);
-    font-size: 18px;
-    font-weight: 600;
-    border: none;
-    border-radius: 5px;
-    width:200px;
-    height: 45px;
-    margin-top: 10px;
-    margin-left: 10px;
+
+    text-decoration: underline;
 }
-#btnHome a {
-    text-decoration: none;
-    color: white;
-}
-#btnHome:hover {
-    opacity: 75%;
-}
-#imgHome {
-    margin-top: 100px;
-    width: 40%;
-    margin-left: 10%;
-}
-#propHome {
-    margin-top: 10px;
-    width: 300px;
-}
-@media (max-width: 750px) {
-    header {
-        height: 190px;
-    }
-    body {
-        background: linear-gradient(to right,  #020202, #b81f1f);
-    }
-    #conteudoHome {
-        flex-direction: column;
-    }
-    #txtHome {
-        width: 80%;
-        margin-left: 10%;
-    }
-    #imgHome {
-        width: 80%;
-        margin-left: 10%;
-    }
-}
-#conteinerAbout {  
+#top {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    margin-bottom: 150px;
 }
-#imgAbout {
-    margin-top: 100px;
-    width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
-} #imgAbout img {
-    width: 300px;
-}#txtAbout {
-    margin-top:100px;
-    width: 40%;
-    margin-left: 5%;
-    margin-right: 5%;
-    color: white;
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    line-height: 30px;
-    font-weight: 600;
-}
-@media (max-width: 750px){
-    #conteinerAbout {
+@media(max-width: 700px){
+    #top {
         flex-direction: column;
     }
-    #txtAbout{
-        width: 80%;
-        line-height: 30px;
-        margin-left: 10%;
-        margin-top: 100px;
-        line-height: 40px;
-    }
-    #imgAbout { 
-        width: 80%;
-        margin-left:  10%;
+    #top #curso  {
         text-align: center;
+        margin-left: 5%;
+        width: 90%;
     }
+    #logonode {
+        display: none;
+    }
+    #meio {
+        flex-direction: column;
+    }
+    #meio #porque {
+        margin-right: 5%;
+        width: 90%;
+    }
+    #meio #destaque {
+        display: none;
+    }
+    #curso {
+        background-image: url('./nonode.png');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+    #porque {
+        background-image: url('./vs.png');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+
 }
-#compraConteudo {
-    width: 100%;
-    height: 700px;
-    background-color: transparent;
-    background-image: url(./image/Roulette.webp);
-    background-position: center center;
-    background-size: cover;
+h2 {
+    margin-left: 5px;
+    font-size: 28px;
 }
-#txtCompraConteudo {
+#curso  {
     color: white;
-    margin-top:  -400px;
-    text-align: center;
-    font-size: 40px;
-    width: 100%;
-    background-color: transparent;
-    backdrop-filter: blur(9px);
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 40%;
+} #curso p {
+    font-size: 19px;
+    line-height: 30px;
 }
-@media (max-width: 750px){
-    #txtCompra{
-        margin-top: -300px;
-    }
+#logonode {
+    width: 40%;
+    margin-top: 60px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+#logonode img {
+    width: 500px;
+}
+#meio {
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
+#porque {
+    border-radius: 10px;
+    border: solid 2px rgb(134, 133, 133);
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 40%;
+    line-height: 30px;
+    background-color: #4e4848;
+    box-shadow: 4px 4px 4px #333;
+}
+#porque p {margin-left: 5px;}
+#porque:hover {
+    background-color: #615c5c;
+}
+#destaque{
+    text-align: center;
+    border-radius: 10px;
+    border: solid 2px rgb(134, 133, 133);
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 40%;
+    line-height: 30px;
+    background-color: #4e4848;
+    box-shadow: 4px 4px 4px #333;
+}
+#destaque p {
+    margin-left: 5px;
+}
+#destaque:hover {
+    background-color: #615c5c;
+}
+/* Estilos do corpo da página */
+#T {
+    padding: 40px;
+    text-align: center;
+}
+
+/* Estilos do rodapé */
+footer {
+    display: flex;
+    flex-direction: row;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+.footer-right {
+    margin-left: 10%;
+    width: 80%;
+}
+footer img {
+    width: 80px;
+    border-radius: 50px;
+    margin-left: 20px;
+}
+
+/* Estilos do botão de inscrição */
+.btn-inscreva-se {
+    margin-top: 40px;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #ef0606;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+/* Estilos da imagem de fundo */
+.background-img {
+    background-image: url('./image/Roulette.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 600px; /* Ajuste conforme necessário */
+    position: relative;
+}
+
+/* Estilos do texto sobreposto na imagem de fundo */
+.overlay-text {
+    height: 100%;
+    width: 100%;
+    font-size: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center;
+    background-color: transparent;
+    backdrop-filter: blur(5px);
+}
+#PP {
+    margin-top: 200px;
 }
