--- a/Curso-de-nodejs-main/style.css
+++ b/Curso-de-nodejs-main/style.css
@@ -121,14 +121,19 @@ h2 {
 footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     background-color: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
 }
+.footer-right {
+    margin-left: 10%;
+    width: 80%;
+}
 footer img {
-    width: 60px;
+    width: 80px;
+    border-radius: 50px;
+    margin-left: 20px;
 }
 
 /* Estilos do botão de inscrição */
